--- a/src/app/shared/components/map/map.component.sass
+++ b/src/app/shared/components/map/map.component.sass
@@ -1,3 +1,5 @@
 .map
   width: calc( 100wh - 700px )
   height: calc( 100vh - 70px )
+  .leaflet-control-container .leaflet-control-geocoder-alternatives
+    display: none !important
